feat(#7): add a demo

--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -1,19 +1,36 @@
-@property --houdini-colorA {
-  syntax: '<color>';
-  inherits: false;
-  initial-value: #fff;
+@font-face {
+    font-family: Biko;
+    src: url(//s3-us-west-2.amazonaws.com/s.cdpn.io/4273/biko-black.woff);
 }
-@property --houdini-colorB {
-  syntax: '<color>';
-  inherits: false;
-  initial-value: #000;
-}
-.tt {
-    background: linear-gradient(45deg, var(--houdini-colorA), var(--houdini-colorB));
-    transition: 1s --houdini-colorA, 1s --houdini-colorB;
 
-    &:hover {
-        --houdini-colorA: yellowgreen;
-        --houdini-colorB: deeppink;
-    }
+body {
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+video,
+h1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+video {
+    object-fit: cover;
+}
+
+h1 {
+    font-size: 20vw;
+    font-family: Biko, sans-serif;
+    font-weight: 700;
+    line-height: 100vh;
+    text-align: center;
+    background: white;
+    mix-blend-mode: screen;
 }
