--- a/src/layout.pug
+++ b/src/layout.pug
@@ -9,7 +9,9 @@ html(lang="zh_CN")
             link(rel="stylesheet", href="/css/animation.css")
             link(rel="stylesheet", href="/css/normalize.css")
         block title
-        
-    body
+    body.body
         block content
         block footer
+
+
+    script(type="module" src="layout.js")
